# cardozo

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  algos.cpp  algos.h  algos.hpp  benchmark.cpp  cardozo.h  combine.py  compile_commands.json  consolidate.sh  dense_cr.cpp  dense_cr.h  densecr.cpp  densecr.h  main.cpp  matrix.cpp  matrix.h  matrix.hpp  sparse_cr.cpp  sparse_cr.h  vector.cpp  vector.h
.cache/clangd/index/: algos.h.9D9B0930AE88C4E6.idx  algos.hpp.3521BE2A5B45D206.idx  dense_cr.cpp.6CBBFA55B2B51CCC.idx  dense_cr.h.97200527901D06F7.idx  densecr.h.ECEE5C7EE87A63A9.idx  main.cpp.432E128303DC2BD7.idx  matrix.cpp.44341BA364EBB3E4.idx  matrix.h.20ABF3BA50A04809.idx  matrix.hpp.3A95711B6AF71893.idx  matrix.tpp.C6B8D2092CCFDCD5.idx  sparce_cr.h.E956621A1318CDB6.idx  sparse_cr.cpp.17B3EE903EF343CA.idx  sparse_cr.h.66D973006DC382AA.idx  vector.cpp.CD3C33CA3A2A0CBD.idx  vector.h.B5856DF1A6CDD162.idx
headers/: algos.h  dense_cr.h  matrix.h  mt_mdata.h  sparse_cr.h  stack_cr.h  utils.h
src/: algos.hpp  dense_cr.cpp  matrix.hpp  sparse_cr.cpp  utils.cpp  vector.cpp
tests/: CMakeLists.txt  algorithms_test.cpp  algos_test.cpp  benchmark.cpp  vector_test.cpp
